--- a/css/evergreen.css
+++ b/css/evergreen.css
@@ -28,3 +28,14 @@ body {
 .runner {
   padding-bottom: 10px;
 }
+
+.chart-row {
+  margin-left: -15px;
+
+}
+
+@media only screen and (max-width: 600px) {
+  .chart-row {
+    margin-left: -40px !important;
+  }
+}
