--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,14 @@ html, body {
 .bg-red {
   background: rgb(196, 50, 53);
 }
+
+.chart-row {
+  margin-left: -15px;
+
+}
+
+@media only screen and (max-width: 600px) {
+  .chart-row {
+    margin-left: -50px !important;
+  }
+}
