--- a/css/evergreen.css
+++ b/css/evergreen.css
@@ -19,10 +19,6 @@
   height: 40px;
 }
 
-.not-footer {
-  padding: 60px;
-}
-
 .runner {
   padding-bottom: 10px;
 }
@@ -52,4 +48,30 @@ a.disabled {
 
 a span {
   padding-left: 10px;
+}
+
+.legend-entry {
+  height: 70px;
+  overflow: hidden;
+}
+
+.legend-entry * {
+  vertical-align: middle;
+}
+
+.legend-entry img {
+  height: 100%;
+  height: 100%;
+  height: 100%;
+
+  display: inline-block;
+}
+
+.circle {
+    display: inline-block;
+    background: lightblue;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    padding: 15px;
 }
