--- a/css/evergreen.css
+++ b/css/evergreen.css
@@ -63,15 +63,26 @@ a span {
   height: 100%;
   height: 100%;
   height: 100%;
-
   display: inline-block;
 }
 
 .circle {
-    display: inline-block;
-    background: lightblue;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    padding: 15px;
+  display: inline-block;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  padding: 15px;
+}
+
+.legend-entry.disabled {
+  color: gainsboro;
+}
+
+.legend-entry.disabled div.circle {
+  background: gainsboro !important;
+}
+
+.legend-entry.disabled img {
+  opacity: 0.4;
+  filter: alpha(opacity=40); /* msie */
 }
